--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@
 * {font-size: 14px;}
 
 body {
-  background-image: url("bg.jpg");
+  background-image: url("images/bg.jpg");
   background-repeat: no-repeat;
   background-color: #e0e0e0;
 }
